# glfw_vulkan_triangle

./: CMakeLists.txt  README.md  compile.sh  triangle-vulkan.c
libs/GLAD/: vulkan.c  vulkan.h
